fix js, html, GServer

--- a/assets/index.html
+++ b/assets/index.html
@@ -20,11 +20,10 @@
     <div class="row">
         <div class="col-sm-10">
             <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Урл картинки:</span>
+                <span class="input-group-text" id="inputGroup-sizing-default">Picture URL:</span>
                 <input type="text"
                        id="img-url"
                        class="form-control"
-                       placeholder="Например, https://i.ibb.co/6DYM05G/edu0.jpg"
                        aria-label="Sizing example input"
                        aria-describedby="inputGroup-sizing-default"
                 >
@@ -55,3 +54,5 @@
     </script>
 </body>
 </html>
+
+<!--placeholder="Например, https://i.ibb.co/6DYM05G/edu0.jpg"-->
