--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <title>Картинки &#8594; Текст</title>
+    <title>Pictures &#8594; Chars</title>
 
     <script>
         {{{JS}}}
@@ -54,5 +54,3 @@
     </script>
 </body>
 </html>
-
-<!--placeholder="Например, https://i.ibb.co/6DYM05G/edu0.jpg"-->
