--- a/assets/index.html
+++ b/assets/index.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col-sm-10">
             <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Picture URL:</span>
+                <span class="input-group-text" id="inputGroup-sizing-default"> URL:</span>
                 <input type="text"
                        id="img-url"
                        class="form-control"
@@ -45,12 +45,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-<script>
-        window.onload = () => {
-            if (window.location.href.includes('test')) {
-                document.getElementById("img-url").value = 'https://i.ibb.co/6DYM05G/edu0.jpg';
-            }
-        }
-    </script>
+
 </body>
 </html>
